--- a/public/views/login.html
+++ b/public/views/login.html
@@ -20,13 +20,19 @@
 
             </div>
         </div>
+
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="login"></label>
+            <div class="col-md-8">
+                <button id="login" name="login" class="btn btn-primary">Login</button>
+            </div>
+        </div>
     </fieldset>
 </form>
 <!— Button (Double) —>
 <div class="form-group">
     <label class="col-md-4 control-label" for="login"></label>
     <div class="col-md-8">
-        <button id="login" name="login" class="btn btn-success">Login</button>
-        <button id="register" name="register" class="btn btn-info" ng-click="go('/register')">Register</button>
+        <a ng-href="#/register">Aún no tienes cuenta? Registrate!</a>
     </div>
 </div>
