--- a/public/views/register.html
+++ b/public/views/register.html
@@ -2,7 +2,7 @@
     <fieldset>
 
         <!— Form Name —>
-        <legend>Register</legend>
+        <legend>Registrar</legend>
 
         <!— Text input-->
         <div class="form-group">
@@ -15,7 +15,7 @@
 
         <!— Text input-->
         <div class="form-group">
-            <label class="col-md-4 control-label" for="nombre">Name</label>
+            <label class="col-md-4 control-label" for="nombre">Nombre</label>
             <div class="col-md-4">
                 <input id="nombre" ng-model="user.nombre" name="nombre" type="text" placeholder="John" class="form-control input-md" required>
 
@@ -24,13 +24,18 @@
 
         <!— Text input-->
         <div class="form-group">
-            <label class="col-md-4 control-label" for="apellidos">Surname</label>
+            <label class="col-md-4 control-label" for="apellidos">Apellidos</label>
             <div class="col-md-4">
                 <input id="apellidos" ng-model="user.apellidos" name="apellidos" type="text" placeholder="Snow" class="form-control input-md" required>
 
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="col-md-4 control-label" for="register"></label>
+            <div class="col-md-8">
+                <button id="register" name="register" class="btn btn-primary" ng-click="register()">Registrar</button>
+            </div>
+        </div>
 
     </fieldset>
 </form>
@@ -38,7 +43,6 @@
 <div class="form-group">
     <label class="col-md-4 control-label" for="register"></label>
     <div class="col-md-8">
-        <button id="register" name="register" class="btn btn-success" ng-click="register()">Register</button>
-        <button id="login" name="login" class="btn btn-info" ng-click="go('/')">Login</button>
+        <a ng-href="#/" >Ya tienes una cuenta? Logueate!</a>
     </div>
 </div>
