Cambio en la interfaz de login y registro v3

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -44,7 +44,7 @@
     <div class="form-group">
         <label class="col-md-4 control-label" for="register"></label>
         <div class="col-md-8">
-            <a ng-href="#/" >Ya tienes una cuenta? Logueate!</a>
+            <a ng-href="#/login" >Ya tienes una cuenta? Logueate!</a>
         </div>
     </div>
 </div>
