--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,12 +1,11 @@
 /** NAVBAR **/
 
-.navbar-brand{
-    padding: 0px;
-}
+/*.navbar-brand{*/
+    /*padding: 0px;*/
+/*}*/
 
-.navbar-brand>img{
-    height:100%;
-    padding: 15px;
-    width: auto;
-    padding:7px 15px;
-}
+/*.navbar-brand>img{*/
+    /*height:100%;*/
+    /*padding: 15px;*/
+    /*width: auto;*/
+/*}*/
