--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,1 +1,8 @@
-<img src="http://lh4.ggpht.com/-jt4oVm0tuT0/TuFZixOPXPI/AAAAAAAAG80/An9i_7vsqlw/gato%252520pianista%252520%2525281%252529_thumb.gif?imgmax=800">
+<div class="container-fluid">
+    <img src="images/logo.png">
+    </br>
+    <img src="http://lh4.ggpht.com/-jt4oVm0tuT0/TuFZixOPXPI/AAAAAAAAG80/An9i_7vsqlw/gato%252520pianista%252520%2525281%252529_thumb.gif?imgmax=800">
+    </br>
+    <img src="http://i.imgur.com/QBTa8sX.gif">
+</div>
+
