--- a/public/views/register.html
+++ b/public/views/register.html
@@ -21,7 +21,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label" for="nombre">Nombre</label>
                 <div class="col-md-4">
-                    <input id="nombre" ng-model="user.nombre" name="nombre" type="text" placeholder="John" class="form-control input-md" required>
+                    <input id="nombre" ng-model="user.nombre" name="nombre" type="text" placeholder="Jon" class="form-control input-md" required>
 
                 </div>
             </div>
