--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,6 +1,12 @@
 <div class="container-fluid">
-    <div>
-
+    <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
+        <h3>Cuentas</h3>
+    </div>
+    <div class="col-md-offset-1 col-md-4  container-fluid" style="background-color: #8c8c8c">
+        <h3>Hashtags</h3>
+    </div>
+    <div class="col-md-offset-1 col-md-2 container-fluid" style="background-color: #8c8c8c">
+        <h3>Hashtags</h3>
     </div>
 
 </div>
