--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
+    <div class="col-md-8">
+        <button ng-click="signInTwitter()" class="btn btn-primary">Login with Twitter</button>
+    </div>
     <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
         <h3>Cuentas</h3>
     </div>
