--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,9 +1,12 @@
 <div class="container-fluid">
     <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
         <h3>Cuentas</h3>
+        <p>cuenta1</p>
+        <p>cuenta2</p>
+
     </div>
     <div class="col-md-offset-1 col-md-4  container-fluid" style="background-color: #8c8c8c">
-        <h3>Hashtags</h3>
+        <h3>HashTweets</h3>
     </div>
     <div class="col-md-offset-1 col-md-2 container-fluid" style="background-color: #8c8c8c">
         <h3>Hashtags</h3>
