--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
     <div class="col-md-8">
-        <button ng-click="signInTwitter()" class="btn btn-primary">Login with Twitter</button>
+        <form method="post" action="/auth/twitter">
+            <input type="hidden" name="user"  value="{{user}}">
+            <button type="submit" class="btn btn-primary">Login with Twitter</button>
+        </form>
     </div>
     <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
         <h3>Cuentas</h3>
