--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container-fluid">
+    <div class="col-md-8  container-fluid" style="background-color: #8c8c8c">
+        <h3>HashTweets</h3>
+    </div>
+    <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
+        <h3>Hashtags</h3>
+    </div>
+</div>
