--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,8 +1,11 @@
 <div class="container-fluid">
-    <img src="images/logo.png">
-    </br>
-    <img src="http://lh4.ggpht.com/-jt4oVm0tuT0/TuFZixOPXPI/AAAAAAAAG80/An9i_7vsqlw/gato%252520pianista%252520%2525281%252529_thumb.gif?imgmax=800">
-    </br>
-    <img src="http://i.imgur.com/QBTa8sX.gif">
+    <div class="col-md-3" align="center">
+        <img src="images/logo.png">
+        <h3>Twitter Account Manager</h3>
+    </div>
+    <div class="col-md-9">
+        <img class="img-responsive" src="images/hootsuite-screenshot-2.png">
+    </div>
+
 </div>
 
