--- a/public/views/tweets.html
+++ b/public/views/tweets.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
     <div class="col-md-3 container-fluid">
-        <form method="post" action="/auth/twitter">
-            <input type="hidden" name="user"  value="{{user}}">
-            <button type="submit" class="btn btn-primary">Login with Twitter</button>
-        </form>
+        <h3>TimeLine</h3>
     </div>
-    <div class="col-md-3 container-fluid" style="background-color: #8c8c8c">
-        <h3>Cuentas</h3>
-        <p>cuenta1</p>
-        <p>cuenta2</p>
+    <div class="col-md-3 container-fluid">
+        <h3>Tus Tweets</h3>
+    </div>
+    <div class="col-md-3 container-fluid">
+        <h3>Menciones</h3>
+    </div>
+    <div class="col-md-3 container-fluid">
+        <h3>RT & FAV</h3>    </div>
 
-    </div>
 </div>
