--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <div class="col-md-8  container-fluid" style="background-color: #8c8c8c">
+    <div class="col-md-8  container-fluid">
         <h3>HashTweets</h3>
     </div>
-    <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
+    <div class="col-md-4 container-fluid">
         <h3>Hashtags</h3>
     </div>
 </div>
