--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
     <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
         <h3>Cuentas</h3>
-        <p>cuenta1</p>
-        <p>cuenta2</p>
+        <div ng-repeat="c in cuentas"></div>
 
     </div>
     <div class="col-md-8">
