--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="container-fluid">
+    <div class="col-md-8  container-fluid">
+        <h3>Usuarios</h3>
+        <div ng-repeat></div>
+    </div>
 
-</body>
-</html>
+</div>
