--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,7 +1,12 @@
 <div class="container-fluid">
     <div class="col-md-8  container-fluid">
-        <h3>Usuarios</h3>
-        <div ng-repeat></div>
+        <header><h3>Usuarios</h3></header>
+        <div ng-repeat>
+            <div class="col-md-2">
+                <img class="img-responsive" src="images/profile.svg">
+            </div>
+
+        </div>
     </div>
 
 </div>
