--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -5,6 +5,7 @@
             <div class="col-md-2">
                 <img class="img-responsive" src="images/profile.svg">
             </div>
+            <div class=""></div>
 
         </div>
     </div>
