--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,14 +1,132 @@
 <div class="container-fluid">
-    <div class="col-md-4 container-fluid" style="background-color: #8c8c8c">
-        <h3>Cuentas</h3>
-        <div ng-repeat="c in cuentas"></div>
-
+    <div class="col-md-4 container-fluid">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4>Cuentas
+                    <form method="post" class="pull-right" action="/auth/twitter">
+                        <input type="hidden" name="user"  value="{{user}}">
+                        <button type="submit" class="btn btn-primary">Login with Twitter</button>
+                    </form>
+                </h4>
+            </div>
+            <table class="table table-hover">
+                <tr>
+                    <th>
+                        Screen Name
+                    </th>
+                    <th>
+                        Información
+                    </th>
+                </tr>
+                <tr ng-repeat="c in cuentas" ng-click="tweets(c)" style="cursor: pointer">
+                    <td>{{c.cuenta}}</td>
+                    <td>{{c.info}}</td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <div class="col-md-8">
-        <form method="post" action="/auth/twitter">
-            <input type="hidden" name="user"  value="{{user}}">
-            <button type="submit" class="btn btn-primary">Login with Twitter</button>
-        </form>
-    </div>
+    <div class="col-md-8" ng-show="mostarTimelines">
+        <div class="panel with-nav-tabs panel-default">
+            <div class="panel-heading">
+                <ul class="nav nav-tabs">
+                    <li ng-repeat="tab in tabs"
+                        ng-class="{active:isActiveTab(tab.url)}"
+                        ng-click="onClickTab(tab)"><a data-toggle="tab">{{tab.title}}</a></li>
+                    <!--<li class="active"><a data-toggle="tab">Default 1</a></li>-->
+                    <!--<li><a data-toggle="tab">Default 2</a></li>-->
+                    <!--<li><a data-toggle="tab">Default 3</a></li>-->
+                </ul>
+            </div>
+            <div class="panel-body">
+                <div class="tab-content">
+                    <div ng-include="currentTab"></div>
+                    <script type="text/ng-template" id="home">
+                        <section class="comment-list">
+                            <!-- First Comment -->
+                            <article class="row" ng-repeat="tw in tuitasHome">
+                                <div class="col-md-3 col-sm-3 hidden-xs">
+                                    <figure class="thumbnail">
+                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                                    </figure>
+                                </div>
+                                <div class="col-md-9 col-sm-9d">
+                                    <div class="panel panel-default arrow left">
+                                        <div class="panel-body">
+                                            <header class="text-left">
+                                                <div class="comment-user"><i class="fa fa-user"></i> <h4>{{tw.user.screen_name}}</h4></div>
+                                            </header>
+                                            <div class="comment-post">
+                                                <p>
+                                                    {{tw.text}}
+                                                </p>
+                                            </div>
+                                            <p class="text-right">
+                                                <!--<a class="btn btn-default btn-sm" href="#">-->
+                                                    <!--<i class="fa fa-reply">-->
+                                                    <!--</i> reply-->
+                                                <!--</a>-->
+                                                <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
+                        <!--<p ng-repeat="tw in tuitasHome">-->
+                            <!--{{tw.text}}-->
+                        <!--</p>-->
+                    </script>
 
+                    <script type="text/ng-template" id="user">
+                        <section class="comment-list">
+                            <!-- First Comment -->
+                            <article class="row" ng-repeat="tw in tuitasUser">
+                                <div class="col-md-3 col-sm-3 hidden-xs">
+                                    <figure class="thumbnail">
+                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                                    </figure>
+                                </div>
+                                <div class="col-md-9 col-sm-9">
+                                    <div class="panel panel-default arrow left">
+                                        <div class="panel-body">
+                                            <header class="text-left">
+                                                <div class="comment-user"><i class="fa fa-user"></i> <h4>{{tw.user.screen_name}}</h4></div>
+                                            </header>
+                                            <div class="comment-post">
+                                                <p>
+                                                    {{tw.text}}
+                                                </p>
+                                            </div>
+                                            <p class="text-right">
+                                                <!--<a class="btn btn-default btn-sm" href="#">-->
+                                                <!--<i class="fa fa-reply">-->
+                                                <!--</i> reply-->
+                                                <!--</a>-->
+                                                <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
+                    </script>
+                    <!--<div id="tab1default" class="tab-pane fade in active">-->
+                        <!--<p ng-repeat="tw in tuitasHome">-->
+                            <!--{{tw.text}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                    <!--<div id="tab2default" class="tab-pane fade">-->
+                        <!--<p ng-repeat="tw in tuitasUser">-->
+                            <!--{{tw.text}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                    <!--<div id="tab3default" class="tab-pane fade">Default 3</div>-->
+                    <!--<div id="tab4default" class="tab-pane fade">Default 4</div>-->
+                    <!--<div id="tab5default" class="tab-pane fade">Default 5</div>-->
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
