--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,28 +1,50 @@
 <div class="container-fluid">
     <div class="col-md-4 container-fluid">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4>Cuentas
-                    <form method="post" class="pull-right" action="/auth/twitter">
-                        <input type="hidden" name="user"  value="{{user}}">
-                        <button type="submit" class="btn btn-primary">Login with Twitter</button>
-                    </form>
-                </h4>
+        <div class="row">
+            <div ng-show="mostarTimelines" class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>
+                        Escribe tus tweets
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <textarea maxlength="140" ng-model="textoTweet" class="col-sm-10 col-md-offset-1" placeholder="Escribe aquí..."></textarea>
+                    </div>
+                    <div class="row">
+                        </br>
+                    </div>
+                    <div class="row">
+                        <button type="button"class="btn btn-primary col-md-offset-8" ng-click="tweeetear(textoTweet);">Tweet</button>
+                    </div>
+                </div>
             </div>
-            <table class="table table-hover">
-                <tr>
-                    <th>
-                        Screen Name
-                    </th>
-                    <th>
-                        Información
-                    </th>
-                </tr>
-                <tr ng-repeat="c in cuentas" ng-click="tweets(c)" style="cursor: pointer">
-                    <td>{{c.cuenta}}</td>
-                    <td>{{c.info}}</td>
-                </tr>
-            </table>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>Cuentas
+                        <form method="post" class="pull-right" action="/auth/twitter">
+                            <input type="hidden" name="user"  value="{{user}}">
+                            <button type="submit" class="btn btn-primary">Login with Twitter</button>
+                        </form>
+                    </h4>
+                </div>
+                <table class="table table-hover">
+                    <tr>
+                        <th>
+                            Screen Name
+                        </th>
+                        <th>
+                            Información
+                        </th>
+                    </tr>
+                    <tr ng-repeat="c in cuentas" ng-click="tweets(c)" style="cursor: pointer">
+                        <td>{{c.cuenta}}</td>
+                        <td>{{c.info}}</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
     <div class="col-md-8" ng-show="mostarTimelines">
@@ -32,9 +54,6 @@
                     <li ng-repeat="tab in tabs"
                         ng-class="{active:isActiveTab(tab.url)}"
                         ng-click="onClickTab(tab)"><a data-toggle="tab">{{tab.title}}</a></li>
-                    <!--<li class="active"><a data-toggle="tab">Default 1</a></li>-->
-                    <!--<li><a data-toggle="tab">Default 2</a></li>-->
-                    <!--<li><a data-toggle="tab">Default 3</a></li>-->
                 </ul>
             </div>
             <div class="panel-body">
@@ -46,7 +65,7 @@
                             <article class="row" ng-repeat="tw in tuitasHome">
                                 <div class="col-md-3 col-sm-3 hidden-xs">
                                     <figure class="thumbnail">
-                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <img ng-src="{{tw.user.profile_image_url}}" class="img-responsive">
                                         <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
                                     </figure>
                                 </div>
@@ -112,19 +131,108 @@
                             </article>
                         </section>
                     </script>
-                    <!--<div id="tab1default" class="tab-pane fade in active">-->
-                        <!--<p ng-repeat="tw in tuitasHome">-->
-                            <!--{{tw.text}}-->
-                        <!--</p>-->
-                    <!--</div>-->
-                    <!--<div id="tab2default" class="tab-pane fade">-->
-                        <!--<p ng-repeat="tw in tuitasUser">-->
-                            <!--{{tw.text}}-->
-                        <!--</p>-->
-                    <!--</div>-->
-                    <!--<div id="tab3default" class="tab-pane fade">Default 3</div>-->
-                    <!--<div id="tab4default" class="tab-pane fade">Default 4</div>-->
-                    <!--<div id="tab5default" class="tab-pane fade">Default 5</div>-->
+                    <script type="text/ng-template" id="mentions">
+                        <section class="comment-list">
+                            <!-- First Comment -->
+                            <article class="row" ng-repeat="tw in tuitasMention">
+                                <div class="col-md-3 col-sm-3 hidden-xs">
+                                    <figure class="thumbnail">
+                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                                    </figure>
+                                </div>
+                                <div class="col-md-9 col-sm-9">
+                                    <div class="panel panel-default arrow left">
+                                        <div class="panel-body">
+                                            <header class="text-left">
+                                                <div class="comment-user"><i class="fa fa-user"></i> <h4>{{tw.user.screen_name}}</h4></div>
+                                            </header>
+                                            <div class="comment-post">
+                                                <p>
+                                                    {{tw.text}}
+                                                </p>
+                                            </div>
+                                            <p class="text-right">
+                                                <!--<a class="btn btn-default btn-sm" href="#">-->
+                                                <!--<i class="fa fa-reply">-->
+                                                <!--</i> reply-->
+                                                <!--</a>-->
+                                                <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
+                    </script>
+                    <script type="text/ng-template" id="favorites">
+                        <section class="comment-list">
+                            <!-- First Comment -->
+                            <article class="row" ng-repeat="tw in tuitasFavorites">
+                                <div class="col-md-3 col-sm-3 hidden-xs">
+                                    <figure class="thumbnail">
+                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                                    </figure>
+                                </div>
+                                <div class="col-md-9 col-sm-9">
+                                    <div class="panel panel-default arrow left">
+                                        <div class="panel-body">
+                                            <header class="text-left">
+                                                <div class="comment-user"><i class="fa fa-user"></i> <h4>{{tw.user.screen_name}}</h4></div>
+                                            </header>
+                                            <div class="comment-post">
+                                                <p>
+                                                    {{tw.text}}
+                                                </p>
+                                            </div>
+                                            <p class="text-right">
+                                                <!--<a class="btn btn-default btn-sm" href="#">-->
+                                                <!--<i class="fa fa-reply">-->
+                                                <!--</i> reply-->
+                                                <!--</a>-->
+                                                <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
+                    </script>
+                    <script type="text/ng-template" id="retweets">
+                        <section class="comment-list">
+                            <!-- First Comment -->
+                            <article class="row" ng-repeat="tw in tuitasRetweets">
+                                <div class="col-md-3 col-sm-3 hidden-xs">
+                                    <figure class="thumbnail">
+                                        <img src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                        <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                                    </figure>
+                                </div>
+                                <div class="col-md-9 col-sm-9">
+                                    <div class="panel panel-default arrow left">
+                                        <div class="panel-body">
+                                            <header class="text-left">
+                                                <div class="comment-user"><i class="fa fa-user"></i> <h4>{{tw.user.screen_name}}</h4></div>
+                                            </header>
+                                            <div class="comment-post">
+                                                <p>
+                                                    {{tw.text}}
+                                                </p>
+                                            </div>
+                                            <p class="text-right">
+                                                <!--<a class="btn btn-default btn-sm" href="#">-->
+                                                <!--<i class="fa fa-reply">-->
+                                                <!--</i> reply-->
+                                                <!--</a>-->
+                                                <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        </section>
+                    </script>
                 </div>
             </div>
         </div>
