--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container-fluid">
+    <div id="upsDowns-holder" style="width:50%">
+        <h1>Altas y bajas</h1>
+        <canvas id="upsDowns"></canvas>
+    </div>
+    <script>
+        var config = {
+            type: 'pie',
+            data: {
+                datasets: [{
+                    data: [
+                        28, // datos que hay que sustituir
+                        25
+                    ],
+                    backgroundColor: [
+                        "#69f0ae",
+                        "#ff5252"
+                    ]
+                }],
+                labels: [
+                    "Altas",
+                    "Bajas"
+                ]
+            },
+            options: {
+                responsive: true
+            }
+        };
+        var ctx = document.getElementById("upsDowns").getContext("2d");
+        new Chart(ctx, config);
+    </script>
+</div>
