--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -1,6 +1,35 @@
 <div class="container-fluid">
     <div id="upsDowns-holder" style="width:50%">
-        <h1>Altas y bajas</h1>
-        <canvas id="upsDowns"></canvas>
+        <h3>Altas y bajas</h3>
+        <canvas id="upsDowns" width="200" height="100"></canvas>
     </div>
+    <script>
+        $(document).ready(function() {
+            console.log("OP");
+            var config = {
+                type: 'pie',
+                data: {
+                    datasets: [{
+                        data: [
+                            336,
+                            55
+                        ],
+                        backgroundColor: [
+                            "#69f0ae",
+                            "#ff5252"
+                        ]
+                    }],
+                    labels: [
+                        "Altas",
+                        "Bajas"
+                    ]
+                },
+                options: {
+                    responsive: true
+                }
+            };
+            var ctx = document.getElementById("upsDowns").getContext("2d");
+            new Chart(ctx, config);
+        });
+    </script>
 </div>
