--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,7 +4,7 @@
         <h3>Twitter Account Manager</h3>
     </div>
     <div class="col-md-9">
-        <img class="img-responsive" src="images/hootsuite-screenshot-2.png">
+        <img class="img-responsive" src="images/main.png">
     </div>
 
 </div>
