--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -41,13 +41,16 @@
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        <input type="text" maxlength="140" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://..."></input>
+                        <input type="text" maxlength="80" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://..."></input>
                     </div>
                     <div class="row">
                         </br>
                     </div>
-                    <div class="row">
-                        <button type="button"class="btn btn-primary col-md-offset-8" ng-click="">Tweet</button>
+                    <div class="form-group">
+                        <label class="col-sm-1 control-label" for="singlebutton">Enlace: {{shortUrl}}</label>
+                        <div>
+                            <button id="singlebutton" type="button"class="btn btn-primary col-md-offset-8" ng-click="short(url);">Short!</button>
+                        </div>
                     </div>
                 </div>
             </div>
